--- a/inspinia-master/inspinia-master/HTML5_Full_Version/table_data_tables.html
+++ b/inspinia-master/inspinia-master/HTML5_Full_Version/table_data_tables.html
@@ -763,7 +763,7 @@
                         <td>KHTML</td>
                         <td>Konqureror 3.5</td>
                         <td>KDE 3.5</td>
-                        <td class="center">3.5</td>
+                        <td class="right">3.5</td>
                         <td class="center">A</td>
                     </tr>
                     <tr class="gradeX">
